# calliope

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
calliope/: __init__.py  ai_providers.py  character_db.py  cli.py  config.py  consistency.py  exporter.py  git_ops.py  scene_generator.py  templates.py  utils.py
docs/: CONTRIBUTING.md  QUICKSTART.md  README.md
templates/characters/: antagonist.yaml  mentor-figure.yaml  romance-love-interest.yaml  romance-protagonist.yaml  sidekick.yaml
templates/scenes/: conflict-scene.yaml  first-meeting.yaml  intimate-scene.yaml  plot-twist.yaml  resolution.yaml
tests/: conftest.py  test_character_db.py  test_config.py  test_consistency.py  test_exporter.py  test_git_ops.py  test_scene_generator.py  test_templates.py
